--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -22,8 +22,167 @@
 	@include respond-to(i5) {
 		padding: 0;
 	}
-	
+
+	&__item{
+		display: block;
+		height: 100%;
+		overflow: hidden;
+		position: relative;
+		transition: background-size .3s linear;
+		background-size: 100%;
+		background-position: 50% 50%;
+		&:hover{
+			background-size: 104%;
+		}
+	}//.new__item
+
+	&__title{
+		padding: 7px 15px;
+		font-size: 17px;
+		color: #fff;
+		background-color: rgba(#000, .5);
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+
+		span{
+			display: block;
+			font-family: $f-light;
+			font-size: 15px;
+			i{
+				position: relative;
+				top: 1px;
+				margin-left: 15px;
+			}
+		}
+	}//.new__title
+
+	&__order{
+		padding: 10px 30px;
+		font-size: 14px;
+		text-transform: uppercase;
+		color: #fff;
+		background-color: $color-bg--dark;
+		position: absolute;
+		bottom: 20px;
+		right: 0;
+		i{
+			margin-left: 15px;
+			font-size: 20px;
+			position: relative;
+			top: 2px;
+		}
+	}//.new__order
+
+	&__bage{
+		padding: 5px 15px;
+		font-size: 14px;
+		text-transform: uppercase;
+		color: #fff;
+		background-color: $color-bg--dark;
+		position: absolute;
+
+		&--new{
+			bottom: 30px;
+			left: 0;
+		}
+	}//.new__bage
 }//.home
+
+
+//Section Best
+// .best{
+// 	&__wrap{
+// 		margin-top: 50px;
+// 		display: flex;
+// 		@include max-screen(768){
+// 			flex-wrap: wrap;
+// 		}
+// 		&_right{
+// 			flex-basis: 70%;
+// 			display: flex;
+// 			@include max-screen(768){
+// 				flex-basis: 100%;
+// 				margin-right: 0;
+// 				margin-bottom: 10px;
+// 			}
+// 		}//best__wrap_left
+// 		&_left{
+// 			flex-basis: 30%;
+// 			margin-right: $gutter;
+// 			display: flex;
+// 			flex-direction: column;
+// 			@include max-screen(768){
+// 				flex-basis: 100%;
+// 				margin-right: 0;
+// 			}
+// 			.best-item{
+// 				min-height: 100%;
+// 				&__address{
+// 					display: none;
+// 					@include max-screen(768){
+// 						display: block;
+// 					}
+// 				}
+// 			}
+// 		}//best__wrap_right
+// 	}//best__wrap
+// }//best
+
+// .best-item{
+// 	@include cover;
+// 	padding: 15px;
+// 	height: 280px;
+// 	position: relative;
+// 	&:nth-child(1){
+// 		flex-basis: 60%;
+// 		@include max-screen(480){
+// 			flex-basis: 100%;
+// 			margin-bottom: $gutter;
+// 		}
+// 	}
+// 	&:nth-child(2){
+// 		flex-basis: 40%;
+// 		@include max-screen(480){
+// 			flex-basis: 100%;
+// 			margin-left: 0;
+// 			margin-bottom: $gutter;
+// 		}
+// 		.best-item{
+// 			&__address{
+// 				display: none;
+// 				@include max-screen(480){
+// 					display: block;
+// 				}
+// 			}
+// 		}
+// 	}
+// 	& + &{
+// 		margin-top: $gutter;
+// 	}
+// 	&__wrap{
+// 		margin-right: $gutter;
+// 		display: flex;
+// 		flex-direction: column;
+// 		flex-basis: 50%;
+// 		@include max-screen(480){
+// 			flex-wrap: wrap;
+// 			flex-basis: 100%;
+// 			margin-right: 0;
+// 		}
+// 		&:last-child{
+// 			margin-right: 0;
+// 		}
+// 		&_reverse{
+// 			flex-direction: column-reverse;
+// 			.best-item + .best-item{
+// 				margin-bottom: $gutter;
+// 				margin-top: 0;
+// 			}
+// 		}//best-item__wrap_reverse
+// 	}//best-item__wrap
+// }//best-item
 
 .advantages-item{
 	margin-bottom: $base-indent*2;
@@ -86,14 +245,13 @@
 		}
 	}//.advantages-item__num
 
-	&__text{
-		font-size: 14px;
-	}//.advantages-item__text	
+	&__text{font-size: 14px;}//.advantages-item__text	
 }//.advantages-item
 
 .why-we{
 	padding: 50px 0;
 	background-color: $color-bg--lighten;
+
 	@include respond-to(xs) {
 		padding-top: 30px;
 	}
@@ -107,25 +265,62 @@
 }//.why-we
 
 .bz-grid{
-	max-height: 630px;
-	@include row-flex;
+	margin-top: $base-indent;
+	
+	&-in{
+		min-height: 550px;
+		@include row-flex;
+
+		@include respond-to(xs) {
+			min-height: auto;
+		}
+	}
+	&-col{
+		@include respond-to(xs) {
+			margin-top: $gutter/2;
+		}		
+	}
 	&-col-3{
-		max-height: 630px;
 		@include col;
 		@include size(4);
+		@include size-xs(12);
+	}
+	&-col-2{
+		@include col;
+		@include size(8);
+		@include size-xs(12);
 	}
 	&-row{
 		height: 100%;
-		@extend %flexColumn;
+		min-height: 210px;
+		overflow: hidden;
 		& + &{
 			margin-top: $gutter;
+			@include respond-to(xs) {
+				margin-top: $gutter/2;
+			}
 		}
 
 		&-2{
-			height: calc(60% - 20px);
+			height: calc(60% - 10px);
+			@include respond-to(xs) {
+				height: 100%;
+				max-height: 210px;
+			}
 		}
 		&-3{
-			height: 40%;			
+			height: calc(40% - 10px);	
+			@include respond-to(xs) {
+				height: 100%;
+				max-height: 210px;
+			}		
+		}
+		&-6{
+			height: calc(50% - 10px);	
+			@include respond-to(xs) {
+				height: 100%;
+				max-height: 210px;
+			}		
 		}
 	}
 	img{
