--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -2,16 +2,16 @@
 title: BAZAR-TEX | Ткани и Фурнитура
 
 advantages:
- - icon: 'fa-percentage'
-   num: '300'
-   text: 'позиций в наличии'
- - icon: 'fa-truck'
-   num: '1200'
-   text: 'отправленных заказов'
- - icon: 'fa-thumbs-up'
-   num: '3'
-   numText: 'года'
-   text: 'большой опыт работы'
+- icon: 'fa-percentage'
+  num: '300'
+  text: 'позиций в наличии'
+- icon: 'fa-truck'
+  num: '1200'
+  text: 'отправленных заказов'
+- icon: 'fa-thumbs-up'
+  num: '3'
+  numText: 'года'
+  text: 'большой опыт работы'
 ---
 {% extends "layouts/_layout.html" %}
 
@@ -25,19 +25,19 @@ advantages:
 		<div class="container">
 
 			<div class="bz-slider bz-slider--promo">
-				<div class="bz-slider__arrow bz-slider__arrow--prev"></div>
-				<div class="bz-slider__arrow bz-slider__arrow--next"></div>
+				<div class="bz-slider__arrow bz-slider__arrow--prev bz-slider-promo__arrow--prev"></div>
+				<div class="bz-slider__arrow bz-slider__arrow--next bz-slider-promo__arrow--next"></div>
 				<div class="bz-slider__slides js-bz-slider--promo">
 					{% for i in range(1, 4) %}
-						<div class="promo-gallery__item">
-							<div class="promo-gallery__img">
-								<img src="img/promo/{{i}}.jpg" alt="alt">
-							</div>
+					<div class="promo-gallery__item">
+						<div class="promo-gallery__img">
+							<img src="img/promo/{{i}}.jpg" alt="alt">
 						</div>
+					</div>
 					{% endfor %}﻿
 				</div>
 			</div>
-		
+
 		</div>
 	</section><!-- end home-slider -->
 	
@@ -54,24 +54,101 @@ advantages:
 				<div class="bz-slider__arrow bz-slider__arrow--next"></div>
 				<div class="bz-slider__slides js-bz-slider--new">
 					{% for i in range(0, 6) %}
-						{{ item.productItemSmall() }}
+					{{ item.productItemSmall() }}
 					{% endfor %}﻿
 				</div>
 			</div>
 
 			<div class="bz-grid">
-				<div class="bz-grid-col-3">
-					<div class="bz-grid-row"><img src="img/exampel/1.jpg" alt=""></div>
-				</div>
-				<div class="bz-grid-col-3">
-					<div class="bz-grid-row bz-grid-row-3"><img src="img/exampel/3.jpg" alt=""></div>
-					<div class="bz-grid-row bz-grid-row-2"><img src="img/exampel/2.jpg" alt=""></div>
-				</div>
-				<div class="bz-grid-col-3">
-					<div class="bz-grid-row bz-grid-row-2"><img src="img/exampel/2.jpg" alt=""></div>
-					<div class="bz-grid-row bz-grid-row-3"><img src="img/exampel/3.jpg" alt=""></div>
+				<div class="bz-grid-in">
+					<div class="bz-grid-col bz-grid-col-3">
+						<div class="bz-grid-row">
+							<a href="#" class="new__item" style="background-image: url('img/examples/1.jpg');">
+								<span class="new__order">Заказать <i class="fal fa-angle-right"></i></span>
+							</a>
+						</div>
+					</div>
+					<div class="bz-grid-col bz-grid-col-3">
+						<div class="bz-grid-row bz-grid-row-3">
+							<a href="#" class="new__item" style="background-image: url('img/examples/3.jpg');">
+								<div class="new__title">
+									Бархат стрейч <span>заказать 
+										<i class="fal fa-angle-right"></i></span>
+								</div>
+							</a>
+						</div>
+						<div class="bz-grid-row bz-grid-row-2">
+							<a href="#" class="new__item" style="background-image: url('img/examples/2.jpg');">
+								<div class="new__title">
+									Бархат стрейч <span>заказать 
+										<i class="fal fa-angle-right"></i></span>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="bz-grid-col bz-grid-col-3">
+						<div class="bz-grid-row bz-grid-row-2">
+							<a href="#" class="new__item" style="background-image: url('img/examples/2.jpg');">
+								<span class="new__bage new__bage--new">NEW</span>
+							</a>
+						</div>
+						<div class="bz-grid-row bz-grid-row-3">
+							<a href="#" class="new__item" style="background-image: url('img/examples/3.jpg');">
+								<div class="new__title">
+									<span>Новое поступление 
+										<i class="fal fa-angle-right"></i></span>
+								</div>
+							</a>
+						</div>
+					</div>
 				</div>
 			</div>
+
+			<div class="bz-grid">
+				<div class="bz-grid-in">
+					<div class="bz-grid-col bz-grid-col-3">
+						<div class="bz-grid-row bz-grid-row-6">
+							<a href="#" class="new__item" style="background-image: url('img/examples/3.jpg');">
+								<div class="new__title">
+									Бархат стрейч <span>заказать 
+										<i class="fal fa-angle-right"></i></span>
+								</div>
+							</a>
+						</div>
+						<div class="bz-grid-row bz-grid-row-6">
+							<a href="#" class="new__item" style="background-image: url('img/examples/3.jpg');"></a>
+						</div>
+					</div>
+					<div class="bz-grid-col bz-grid-col-2">
+						<div class="bz-grid-row bz-grid-row">
+							<a href="#" class="new__item" style="background-image: url('img/examples/4.jpg');">
+								<span class="new__order">Заказать <i class="fal fa-angle-right"></i></span>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+	<!-- 		<div class="best__wrap">
+				<div class="best__wrap_left">
+					<a href="#" class="best-item" style="background-image: url('img/examples/1.jpg');">
+					</a>
+				</div>
+				<div class="best__wrap_right">
+					<div class="best-item__wrap">
+						<a href="#" class="best-item" style="background-image: url('img/examples/2.jpg');">
+						</a>
+						<a href="#" class="best-item" style="background-image: url('img/examples/3.jpg');">
+						</a>
+					</div>
+					<div class="best-item__wrap best-item__wrap_reverse">
+						<a href="#" class="best-item" style="background-image: url('img/examples/3.jpg');">
+						</a>
+						<a href="#" class="best-item" style="background-image: url('img/examples/2.jpg');">
+						</a>
+					</div>
+				</div>
+			</div> -->
 			
 
 		</div>
