--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -47,7 +47,7 @@
 				<div class="user-nav header__user-nav">
 					<ul class="user-nav__list">
 						<li class="user-nav__item">
-							<a href="#" class="user-nav__link xs-hide">
+							<a href="#auth-form" data-toggle="modal" class="user-nav__link xs-hide">
 								<i class="fal fa-user user-nav__icon"></i>
 								<span class="user-nav__text">Войти</span>
 							</a>
@@ -76,7 +76,7 @@
 			</div>
 		</div>
 		<!-- end header__bottom -->
-		
+
 		{% include "partials/_nav-main.html" %}
 	</div>
 
