--- a/src/templates/partials/_items.html
+++ b/src/templates/partials/_items.html
@@ -116,10 +116,11 @@
 					</li>
 				</ul>
 			</div>
-	
-			{{ item.btn('добавить в корзину', 'button--transparent button--muted product-item__btn') }}
-	
-			{{ item.btn('подробнее', 'button--transparent button--default product-item__btn') }}
+
+			<button class="button button--transparent button--muted product-item__btn">добавить в корзину</button>
+
+			<button class="button button--transparent button--default product-item__btn">подробнее</button>
+		
 		</div>
 	</div>
 </a>
