--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -91,9 +91,9 @@
 	right: 10px;
 	&::before{
 		content: '\f107';
-		font-family: fontawesome;
+		font-family: fal;
 		font-size: 14px;
-		color: $gray--light;
+		color: $gray--dark;
 
 	}
 }
@@ -125,17 +125,22 @@
 
 .select2-container--default .select2-results__option[aria-disabled=true]{color: $gray--light;}
 
-.select2-dropdown, .select2-container--default .select2-search--dropdown .select2-search__field{border-color: $color-border--light;}
+.select2-dropdown, .select2-container--default .select2-search--dropdown .select2-search__field{
+	border-color: rgba($gray, .7);
+}
 .select2-container .select2-selection--single .select2-selection__rendered{
 	padding: 0 30px 0 10px;
 	font-family: oswald-500,sans-serif;
 	font-size: 14px;
 }
 .select2-container--default .select2-results__option--highlighted[aria-selected]{
-	color: $color-text;
-	background-color: rgba($color-main, .1);
+	color: #fff;
+	background-color: rgba($gray, .7);
 }
-.select2-container--default .select2-results__option[aria-selected=true]{background-color: rgba($color-main, .25);}
+.select2-container--default .select2-results__option[aria-selected=true]{
+	color: #fff;
+	background-color: rgba($gray, .7);
+}
 
 .select2-container--default .select2-selection--multiple, .select2-container--default .select2-selection--single{height: 40px; border-color: $gray--lighten;}
 .select2-container--default.select2-container--focus .select2-selection--multiple{border-color: $gray--lighten;}
