--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -2,6 +2,9 @@ body{
 	&.loading{
 		.preloader{display: block;}
 	}
+	&.modal-open{
+		padding-right: 0 !important;
+	}
 }
 
 .icon{fill: $gray--darken;}
