--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,10 +1,12 @@
 .header{	
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: z(default);
 
 	@include respond-to(xs) {
 		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
 		z-index: z(fixed);
 	}
 
