--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,9 +1,8 @@
-.promo{
-	margin-top: 10px;
-}//.promo
+.promo{margin-top: 10px;}//.promo
 
 .advantages{
 	padding-top: 0;
+	
 	@include respond-to(xs) {
 		padding-bottom: 10px;
 	}
@@ -88,101 +87,71 @@
 			left: 0;
 		}
 	}//.new__bage
-}//.home
+}//.new
 
+.bz-grid{
+	margin-top: $base-indent;
+	
+	&-in{
+		min-height: 550px;
+		@include row-flex;
 
-//Section Best
-// .best{
-// 	&__wrap{
-// 		margin-top: 50px;
-// 		display: flex;
-// 		@include max-screen(768){
-// 			flex-wrap: wrap;
-// 		}
-// 		&_right{
-// 			flex-basis: 70%;
-// 			display: flex;
-// 			@include max-screen(768){
-// 				flex-basis: 100%;
-// 				margin-right: 0;
-// 				margin-bottom: 10px;
-// 			}
-// 		}//best__wrap_left
-// 		&_left{
-// 			flex-basis: 30%;
-// 			margin-right: $gutter;
-// 			display: flex;
-// 			flex-direction: column;
-// 			@include max-screen(768){
-// 				flex-basis: 100%;
-// 				margin-right: 0;
-// 			}
-// 			.best-item{
-// 				min-height: 100%;
-// 				&__address{
-// 					display: none;
-// 					@include max-screen(768){
-// 						display: block;
-// 					}
-// 				}
-// 			}
-// 		}//best__wrap_right
-// 	}//best__wrap
-// }//best
+		@include respond-to(xs) {
+			min-height: auto;
+		}
+	}
+	&-col{
+		@include respond-to(xs) {
+			margin-top: $gutter/2;
+		}		
+	}
+	&-col-3{
+		@include col;
+		@include size(4);
+		@include size-xs(12);
+	}
+	&-col-2{
+		@include col;
+		@include size(8);
+		@include size-xs(12);
+	}
+	&-row{
+		height: 100%;
+		min-height: 210px;
+		overflow: hidden;
+		& + &{
+			margin-top: $gutter;
+			@include respond-to(xs) {
+				margin-top: $gutter/2;
+			}
+		}
 
-// .best-item{
-// 	@include cover;
-// 	padding: 15px;
-// 	height: 280px;
-// 	position: relative;
-// 	&:nth-child(1){
-// 		flex-basis: 60%;
-// 		@include max-screen(480){
-// 			flex-basis: 100%;
-// 			margin-bottom: $gutter;
-// 		}
-// 	}
-// 	&:nth-child(2){
-// 		flex-basis: 40%;
-// 		@include max-screen(480){
-// 			flex-basis: 100%;
-// 			margin-left: 0;
-// 			margin-bottom: $gutter;
-// 		}
-// 		.best-item{
-// 			&__address{
-// 				display: none;
-// 				@include max-screen(480){
-// 					display: block;
-// 				}
-// 			}
-// 		}
-// 	}
-// 	& + &{
-// 		margin-top: $gutter;
-// 	}
-// 	&__wrap{
-// 		margin-right: $gutter;
-// 		display: flex;
-// 		flex-direction: column;
-// 		flex-basis: 50%;
-// 		@include max-screen(480){
-// 			flex-wrap: wrap;
-// 			flex-basis: 100%;
-// 			margin-right: 0;
-// 		}
-// 		&:last-child{
-// 			margin-right: 0;
-// 		}
-// 		&_reverse{
-// 			flex-direction: column-reverse;
-// 			.best-item + .best-item{
-// 				margin-bottom: $gutter;
-// 				margin-top: 0;
-// 			}
-// 		}//best-item__wrap_reverse
-// 	}//best-item__wrap
-// }//best-item
+		&-2{
+			height: calc(60% - 10px);
+			@include respond-to(xs) {
+				height: 100%;
+				max-height: 210px;
+			}
+		}
+		&-3{
+			height: calc(40% - 10px);	
+			@include respond-to(xs) {
+				height: 100%;
+				max-height: 210px;
+			}		
+		}
+		&-6{
+			height: calc(50% - 10px);	
+			@include respond-to(xs) {
+				height: 100%;
+				max-height: 210px;
+			}		
+		}
+	}
+	img{
+		height: 100%;
+	}
+}//.bz-grid
 
 .advantages-item{
 	margin-bottom: $base-indent*2;
@@ -263,67 +232,3 @@
 		font-size: 22px;
 	}
 }//.why-we
-
-.bz-grid{
-	margin-top: $base-indent;
-	
-	&-in{
-		min-height: 550px;
-		@include row-flex;
-
-		@include respond-to(xs) {
-			min-height: auto;
-		}
-	}
-	&-col{
-		@include respond-to(xs) {
-			margin-top: $gutter/2;
-		}		
-	}
-	&-col-3{
-		@include col;
-		@include size(4);
-		@include size-xs(12);
-	}
-	&-col-2{
-		@include col;
-		@include size(8);
-		@include size-xs(12);
-	}
-	&-row{
-		height: 100%;
-		min-height: 210px;
-		overflow: hidden;
-		& + &{
-			margin-top: $gutter;
-			@include respond-to(xs) {
-				margin-top: $gutter/2;
-			}
-		}
-
-		&-2{
-			height: calc(60% - 10px);
-			@include respond-to(xs) {
-				height: 100%;
-				max-height: 210px;
-			}
-		}
-		&-3{
-			height: calc(40% - 10px);	
-			@include respond-to(xs) {
-				height: 100%;
-				max-height: 210px;
-			}		
-		}
-		&-6{
-			height: calc(50% - 10px);	
-			@include respond-to(xs) {
-				height: 100%;
-				max-height: 210px;
-			}		
-		}
-	}
-	img{
-		height: 100%;
-	}
-}//.bz-grid
