--- a/src/templates/partials/_popup.html
+++ b/src/templates/partials/_popup.html
@@ -1,11 +1,3 @@
-<!-- begin auth-form -->
-<div class="modal-window is-hidden">
-	<div class="modal-window__header"></div>
-	<div class="modal-window__body"></div>
-	<div class="modal-window__footer"></div>
-</div>
-<!-- end auth-form -->
-
 <div class="modal fade" id="exampleModal">
 	<div class="modal-dialog">
 		<div class="modal-content">
@@ -26,6 +18,7 @@
 	</div>
 </div>
 
+<!-- begin change-city -->
 <div class="modal fade change-city" id="change-city">
 	<div class="modal-dialog modal-dialog--md">
 		<div class="modal-content">
@@ -72,6 +65,7 @@
 		</div>
 	</div>
 </div>
+<!-- end change-city -->
 
 <!-- begin auth-form -->
 <div class="modal fade" id="auth-form">
