--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -14,11 +14,11 @@
 	<meta name="msapplication-navbutton-color" content="#a3467d">
 	<meta name="apple-mobile-web-app-status-bar-style" content="#a3467d">
 
-	<link rel="shortcut icon" type="image/x-icon" href="img/favicon/favicon.ico" sizes="16x16">
-	<link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-touch-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-touch-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="img/favicon/android-chrome-76x76.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="img/favicon/android-chrome-icon-144x144.png">
+	<link rel="shortcut icon" type="image/x-icon" href="img/general/favicon/favicon.ico" sizes="16x16">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/general/favicon/apple-touch-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/general/favicon/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/general/favicon/android-chrome-76x76.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/general/favicon/android-chrome-icon-144x144.png">
 
 	{#{% include "../partials/assets/_media-tags.html" %}#}
 
@@ -39,6 +39,10 @@
 		{% include "partials/_popup.html" %}
 	</div>
 	<!-- end windows -->
+
+	<!-- begin go-top -->
+	<div class="go-top js-go-top">Наверх</div>
+	<!-- end go-top -->
 
 	<!-- begin overlay -->
 	<div class="overlay js-overlay"></div>
