--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -27,8 +27,8 @@
 		<div class="header__bottom">
 			<div class="header__in">
 				<!-- begin logo -->
-				<div class="logo header__logo" itemscope itemprop="logo" itemtype="http://schema.org/Organization">
-					<a href="home.html" class="logo__link" itemprop="url">
+				<div class="logo header__logo">
+					<a href="home.html" class="logo__link">
 						<img src="img/general/logo.svg" alt="Bazar-TEX Ткани и фурнитура">
 					</a>
 				</div>
