--- a/src/templates/partials/_items.html
+++ b/src/templates/partials/_items.html
@@ -117,9 +117,9 @@
 				</ul>
 			</div>
 
-			<button class="button button--transparent button--muted product-item__btn">добавить в корзину</button>
+			<button class="button button--transparent button--muted product-item__btn">Добавить в корзину</button>
 
-			<button class="button button--transparent button--default product-item__btn">подробнее</button>
+			<button class="button button--transparent button--default product-item__btn">Подробнее</button>
 		
 		</div>
 	</div>
