--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -39,6 +39,7 @@ h1,.h1 {
 	}
 }
 h2,.h2 {
+	font-family: $f2-bold;
 	font-size: 22px;
 	line-height: 1.25em;
 	font-weight: 400;
@@ -54,7 +55,7 @@ h2,.h2 {
 	}
 }
 h3,.h3 {
-	font-family: $f-medium;
+	font-family: $f2-bold;
 	font-weight: 500;
 	font-size: 28px;
 	line-height: 1.25em;
@@ -85,3 +86,5 @@ h5,.h5, h6,.h6 {
 	font-size: 12px;
 	letter-spacing: 0.24px;
 }
+
+p{margin-bottom: $gutter;}
