--- a/src/sass/components/_accordeon.scss
+++ b/src/sass/components/_accordeon.scss
@@ -10,6 +10,7 @@
 						&__title{
 							&::before{
 								content: '';
+								margin-top: -5px;
 								transform: rotate(90deg);
 							}
 							&::after{
@@ -21,34 +22,28 @@
 				}
 			}
 			&__title{
-				padding: 15px 50px 15px 15px;
 				margin: 0;
-				&::after{
+
+				&::after, &::before{
 					content: '';
 					display: block;
 					position: absolute;
 					top: 50%;
-					right: 20px;
+					background-color: $gray--dark;
+					transform-origin: 50% 50%;	
+					will-change: transform;		
+					@include tr;	
+				}
+
+				&::after{
+					right: 10px;
 					width: 11px;
 					height: 1px;
-					background-color: $color-main;
-					transform-origin: 50% 50%;
-					will-change: transform;
-					@include tr;
 				}
 				&::before{
-					content: '';
-					display: block;
-					position: absolute;
-					top: 50%;
-					margin-top: -5px;
-					right: 10px;
+					right: 15px;
 					width: 1px;
 					height: 11px;
-					background-color: $color-main;
-					transform-origin: 50% 50%;
-					will-change: transform;
-					@include tr;
 				}
 			}
 			&__content{
@@ -58,10 +53,6 @@
 	}//accordeon--other
 
 	&__item{
-		
-		& + .accordeon__item{
-			margin-top: 10px;
-		}
 		@include max-screen(480) {
 			box-shadow: none;
 		}
@@ -95,9 +86,6 @@
 			color: $color-icon--light;
 			@include vy;
 			right: 5px;
-		}
-		&:hover{
-			box-shadow: $bxs-hover;
 		}
 		@include max-screen(768) {
 			&:hover{
