--- a/src/sass/helpers/_vars.scss
+++ b/src/sass/helpers/_vars.scss
@@ -79,7 +79,7 @@ $border-radius           :2px;
 $color-placeholder       :$gray;
 
 //Тень
-$bxs: 1px 1px 10px #ddd;
+$bxs: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
 $bxs-hover: 1px 1px 10px rgba($color-main ,0.6);
 $bxs-i: inset 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
 
@@ -98,8 +98,8 @@ $z-index: (
 	bottom                 : -9999,
 	down                   : -1,
 	default                : 1,
-	fixed                  : 50,
-	absolute               : 99,
+	absolute               : 50,
+	fixed                  : 99,
 	dropdown               : 333,
 	overlay                : 900,
 	mobileMenu             : 901,
