--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -22,21 +22,25 @@ changer:
 	<div class="container">
 
 		<div class="catalog__wrap">
-			<!-- begin catalog-filter -->
-			<div class="catalog-filter catalog__filter">
-				<hr>
-			</div>
-			<!-- end catalog-filter -->
+
+			{% include "partials/components/_catalog-filter.html" %}
+
+			<!-- begin catalog-filter__btn -->
+			<button class="catalog-filter__btn catalog-filter__btn--show js-catalog-filter--show">
+				{{mixin.icon('filter-btn')}}
+			</button>
+			<!-- end catalog-filter__btn -->
+
 			<!-- begin catalog-content -->
 			<div class="catalog-content catalog__content">
-
 				<!-- begin catalog__top-line -->
 				<div class="catalog__top-line">
 					 <div class="catalog__title">
+					 	<a href="#" class="catalog__back"><i class="far fa-angle-left"></i></a>
 					 	<h1 class="h1" itemprop="headline">Атлас</h1>
 					 	<span class="catalog__count">350 товаров на складе</span>
 					 </div>
-					<div class="catalog__sorting sorting">
+					<div class="catalog__sorting sorting bz-select--dark">
 						<span class="sorting__title">Сортировать по:</span>
 						<select class="js-select no-search">
 							<option value="По возрастанию цены">По возрастанию цены</option>
@@ -62,11 +66,56 @@ changer:
 				</div>
 				<!-- end catalog__changer -->
 
+				<!-- begin product-item -->
 				<div class="product-item__wrap">
 					{% for i in range(0, 10) %}
 						{{ item.productItem() }}
 					{% endfor %}﻿
 				</div>
+				<!-- end product-item -->
+
+				<!-- begin catalog-content__empty -->
+				<div class="catalog-content__empty" style="display: none;">
+					<p>По вашим поисковым параметрам ничего не найдено</p>
+					<button class="button button--transparent button--muted">Сбросить фильтр</button>
+				</div>
+				<!-- end catalog-content__empty -->
+
+				<!-- begin catalog-content__btn -->
+				<button class="button button--transparent button--info catalog-content__btn">Показать еще</button>
+				<!-- end catalog-content__btn -->
+
+				<!-- begin pagination -->
+				<div class="pagination">
+					<ul class="pagination__list">
+						<li class="pagination__item">
+							<a href="#" class="pagination__link">
+								<i class="fal fa-angle-left pagination__icon"></i>
+							</a>
+						</li>
+						<li class="pagination__item">
+							<a href="#" class="pagination__link">1</a>
+						</li>
+						<li class="pagination__item is-active">
+							<a href="#" class="pagination__link">2</a>
+						</li>
+						<li class="pagination__item">
+							<a href="#" class="pagination__link">3</a>
+						</li>
+						<li class="pagination__item">
+							<a href="#" class="pagination__link">
+								<i class="fal fa-angle-right pagination__icon"></i>
+							</a>
+						</li>
+					</ul>
+				</div>
+				<!-- end pagination -->
+
+				<!-- begin catalog-content__preloader -->
+				<div class="catalog-content__preloader preloader" style="display: none;">
+					<div class="preloader__inner"></div>
+				</div>
+				<!-- end catalog-content__preloader -->
 			</div>
 			<!-- end catalog-content -->
 		</div>
